implemented designing hero section

--- a/index.html
+++ b/index.html
@@ -29,6 +29,19 @@
         </div>
 
     </header>
+
+    <section class="hero">
+        <img src="/images/Hero_Large_Desktop.jpg" alt="hero image- VR Headsets">
+
+        <div class="hero-content">
+            <div class="container">
+               <h1>Discover our line of VR Headsets</h1>
+               <p>"Step Into the Future: Discover Immersive 
+                   Worlds with Our VR Headsets!"</p>
+                <button>View Headsets</button>
+            </div>
+        </div>
+    </section>
     
 </body>
 </html>
