--- a/index.html
+++ b/index.html
@@ -102,6 +102,12 @@
             </div>
         </div>
     </section>
+
+    <section class="newsletter">
+        <h3>Newsletter Signup</h3>
+        <p>Subscribe now and don't miss a single deal!</p>
+        <input type="email" placeholder="Your email..."><button type="submit">Subscribe</button>
+    </section>
     
 </body>
 </html>
