--- a/index.html
+++ b/index.html
@@ -108,6 +108,48 @@
         <p>Subscribe now and don't miss a single deal!</p>
         <input type="email" placeholder="Your email..."><button type="submit">Subscribe</button>
     </section>
+
+    <footer>
+        <div class="container">
+
+            <ul>
+                <li class="list-title">Categories</li>
+                <li><a href="#">Watches</a></li>
+                <li><a href="#">Cameras</a></li>
+                <li><a href="#">Phone</a></li>
+                <li><a href="#">Tablets</a></li>
+                <li><a href="#">Computers</a></li>
+            </ul>
+            <ul>
+                <li class="list-title">About us</li>
+                <li><a href="#">Our Story</a></li>
+                <li><a href="#">Blogs</a></li>
+                <li><a href="#">Press</a></li>
+                <li><a href="#">Awards</a></li>
+                <li><a href="#">Stores</a></li>
+            </ul>
+            <ul>
+                <li class="list-title">Social Media</li>
+                <li><a href="#">Facebook</a></li>
+                <li><a href="#">Instagram</a></li>
+                <li><a href="#">Twitter</a></li>
+                <li><a href="#">LinkedIn</a></li>
+                <li><a href="#">YouTube</a></li>
+            </ul>
+            <ul>
+                <li class="list-title">Customer Service</li>
+                <li><a href="#">Live Chat</a></li>
+                <li><a href="#">Contact Us</a></li>
+                <li><a href="#">Terms &amp; Conditions</a></li>
+                <li><a href="#">Deliveries &amp; Returns</a></li>
+                <li><a href="#">Finance</a></li>
+            </ul>
+        </div>
+    </footer>
+
+    <section class="copyright">
+        &reg All Rights Reserved
+    </section>
     
 </body>
 </html>
