--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Poppins:ital,wght@0,400;1,600&family=Work+Sans:wght@500&display=swap" rel="stylesheet">
-    <link rel='stylesheet' href="/css/styles.css">
+    <link rel='stylesheet' href="css/styles.css">
     <title> VR Headsets</title>
 </head>
 <body>
